--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -11,17 +11,15 @@
 <idea-plugin version="2">
   <id>org.arguslab.cit.intellij</id>
   <name>Argus-CIT</name>
-  <version>1.0</version>
+  <version>VERSION</version>
   <vendor url="http://www.arguslab.org/">Argus Laboratory</vendor>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="162.74" until-build="163.0"/>
+  <idea-version since-build="145.0"/>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
        on how to target different products -->
-  <!-- uncomment to enable plugin in all products
-  <depends>com.intellij.modules.lang</depends>
-  -->
+  <!--<depends>com.intellij.modules.lang</depends>-->
 
   <extensions defaultExtensionNs="com.intellij">
     <fileTypeFactory implementation="org.argus.cit.intellij.core.JawaFileTypeFactory"/>
