--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -22,7 +22,7 @@
   <!--<depends>com.intellij.modules.lang</depends>-->
 
   <extensions defaultExtensionNs="com.intellij">
-    <fileTypeFactory implementation="org.argus.cit.intellij.core.JawaFileTypeFactory"/>
+    <fileTypeFactory implementation="org.argus.cit.intellij.core.lang.JawaFileTypeFactory"/>
   </extensions>
 
   <actions>
