--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,6 +24,8 @@
   <extensions defaultExtensionNs="com.intellij">
     <fileTypeFactory implementation="org.argus.cit.intellij.core.lang.JawaFileTypeFactory"/>
     <lang.parserDefinition language="Jawa" implementationClass="org.argus.cit.intellij.core.lang.parser.JawaParserDefinition"/>
+    <lang.syntaxHighlighterFactory key="Jawa" implementationClass="org.argus.cit.intellij.core.highlighter.JawaSyntaxHighlighterFactory"/>
+    <colorSettingsPage implementation="org.argus.cit.intellij.core.highlighter.JawaColorSettingsPage"/>
   </extensions>
 
   <actions>
