--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -47,6 +47,9 @@
     <methodHierarchyProvider language="Jawa" implementationClass="org.argus.cit.intellij.jawa.hierarchy.JawaMethodHierarchyProvider"/>
     <typeHierarchyProvider language="Jawa" implementationClass="org.argus.cit.intellij.jawa.hierarchy.JawaTypeHierarchyProvider"/>
 
+    <findUsagesHandlerFactory implementation="com.intellij.find.findUsages.JavaFindUsagesHandlerFactory" id="jawa"
+                              order="first"/>
+
     <applicationConfigurable groupId="language" displayName="Jawa Compile Server" instance="org.argus.cit.intellij.jawa.compiler.JawaCompileServerForm"/>
 
     <applicationService serviceInterface="org.argus.cit.intellij.jawa.compiler.JawaCompileServerSettings"
