--- a/src/main/resources/org/argus/cit/intellij/jawa/JawaBundle.properties
+++ b/src/main/resources/org/argus/cit/intellij/jawa/JawaBundle.properties
@@ -20,3 +20,9 @@ newclass.menu.action.text=Jawa Class
 newclass.menu.action.description=Creates new Jawa Class
 newclass.command.name=Create Jawa Class
 newclass.progress.text=Creating Jawa Class ''{0}''
+
+########################################################################################################################
+# Android Cit
+########################################################################################################################
+argus.module.type.name=Application Module
+argus.module.type.description=Argus-CIT modules are used for inspection mobile applications targeting the Android OS.
