--- a/src/main/resources/org/argus/cit/intellij/jawa/JawaBundle.properties
+++ b/src/main/resources/org/argus/cit/intellij/jawa/JawaBundle.properties
@@ -26,3 +26,8 @@ newclass.progress.text=Creating Jawa Class ''{0}''
 ########################################################################################################################
 argus.module.type.name=Application Module
 argus.module.type.description=Argus-CIT modules are used for inspection mobile applications targeting the Android OS.
+
+########################################################################################################################
+# Debugger
+########################################################################################################################
+line.breakpoints.tab.title=Jawa Line Breakpoints
