--- a/src/main/resources/org/argus/cit/intellij/jawa/JawaBundle.properties
+++ b/src/main/resources/org/argus/cit/intellij/jawa/JawaBundle.properties
@@ -31,3 +31,8 @@ argus.module.type.description=Argus-CIT modules are used for inspection mobile a
 # Debugger
 ########################################################################################################################
 line.breakpoints.tab.title=Jawa Line Breakpoints
+
+########################################################################################################################
+# Apk Information View
+########################################################################################################################
+title.basicInfo=Basic Info
