--- a/src/main/resources/org/argus/cit/intellij/jawa/JawaBundle.properties
+++ b/src/main/resources/org/argus/cit/intellij/jawa/JawaBundle.properties
@@ -35,4 +35,6 @@ line.breakpoints.tab.title=Jawa Line Breakpoints
 ########################################################################################################################
 # Apk Information View
 ########################################################################################################################
-title.basicInfo=Basic Info
+title.apkInfo=Apk Info
+title.applicationInfo=Application Info
+title.interestApiString=Interesting Apis and Strings
